fixed media wrap structure added client testimonial

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ font-size: 2rem
   display: grid;
   gap: 1rem;
   align-items: stretch;
-  margin-bottom: 2rem;
+  margin-bottom: 6rem;
   width: 100%;
 }
 
@@ -133,6 +133,10 @@ font-size: 2rem
   flex: 0 1 60%;
 }
 
+section.client-testimonial {
+  max-width: 800px;
+}
+
 .text-section {
   min-width: 0;
   display: flex;
@@ -156,6 +160,10 @@ font-size: 2rem
 
 .media-wrapper.aspect-ratio-4-5 {
   aspect-ratio: 4 / 5;
+}
+
+.media-wrapper.aspect-ratio-1-1 {
+  aspect-ratio: 1 / 1;
 }
 
 .media-wrapper img,
@@ -270,6 +278,15 @@ font-size: 2rem
 
 .header-icon {
   padding-top: 1rem;
+}
+
+.client {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .client-header-logo-wrap {
